Fixed navbar alignment and buttons

--- a/css/giphy.css
+++ b/css/giphy.css
@@ -103,12 +103,15 @@ body{
 }
 
 @media(max-width:768px){
-  .searchButton, .random{
+  .searchButton {
      display: block;
      margin-left: auto;
      margin-right: auto;
      margin-top: 10px;
      width: 50%;
+ }
+ .randomdiv, .random{
+   width: 100%;
  }
  .image{
    display: block;
